2022-09-12T16:11:08Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3038837666
* notice: last 14d: unq all: 5 10
* notice: prev accum: outdated-unq outdated-all / unq all: 20 53 / 26 64
* notice: next accum: outdated-unq outdated-all / unq all: 21 54 / 26 64
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-29] / []

2022-09-09T00:41:07Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3019210567
* notice: last 14d: unq all: 6 11
* notice: prev accum: outdated-unq outdated-all / unq all: 19 52 / 26 64
* notice: next accum: outdated-unq outdated-all / unq all: 20 53 / 26 64
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-25] / []

2022-09-08T16:09:14Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3016594994
* notice: last 14d: unq all: 7 12
* notice: prev accum: outdated-unq outdated-all / unq all: 19 52 / 25 61
* notice: next accum: outdated-unq outdated-all / unq all: 19 52 / 26 64
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2022-09-08]

2022-09-07T08:12:48Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3006036836
* notice: last 14d: unq all: 6 9
* notice: prev accum: outdated-unq outdated-all / unq all: 18 48 / 25 58
* notice: next accum: outdated-unq outdated-all / unq all: 19 52 / 25 61
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-24] / []

2022-09-07T00:40:43Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3004308741
* notice: last 14d: unq all: 7 10