@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-12T16:11:08Z",
-  "count_outdated" : 54,
-  "uniques_outdated" : 21,
+  "timestamp" : "2022-09-14T00:39:42Z",
+  "count_outdated" : 56,
+  "uniques_outdated" : 22,
   "count" : 64,
   "uniques" : 26,
   "views" : [
-    {
-      "timestamp": "2022-08-30T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-01T00:00:00Z",
       "count": 1,
