@@ -1,3 +1,11 @@
+2022-09-14T00:39:42Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3049361801
+* notice: last 14d: unq all: 4 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 21 54 / 26 64
+* notice: next accum: outdated-unq outdated-all / unq all: 22 56 / 26 64
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-08-30] / []
+
 2022-09-12T16:11:08Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3038837666
 * notice: last 14d: unq all: 5 10
